# open-mat

./: Cargo.toml  README.md  shell.nix
.cargo/: config.toml
pcb/: pcb.kicad_pro  pcb.kicad_sch  ~pcb.kicad_sch.lck
src/: main.rs
