[package]
name = "open-mat"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.5"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f446"] }
panic-halt = "0.2.0"
rtt-target = "0.6.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
